# DRADIS

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT_PLAN.md  Dockerfile  README.md  deploy-multi.sh.example  fix_patrol.py  logs-all.sh.example  pull-logs.sh.example  session.file  setup-demo-server.sh  start-local.sh  status.sh.example  stop-all.sh.example  stop-local.sh
.github/: FUNDING.yml
.github/workflows/: codeql.yml  rust.yml
control-tower/: .env.local.example  next.config.ts  package.json  tailwind.config.ts
control-tower/src/: middleware.ts
control-tower/src/app/: globals.css  layout.tsx  page.tsx
control-tower/src/app/api/[...path]/: route.ts
control-tower/src/app/api/portfolio/: route.ts
control-tower/src/components/: AdvancedConfigModal.tsx  BacktestPage.tsx  DemoBanner.tsx  DeploySquadronModal.tsx  ErrorBoundary.tsx  LlmAdvisorCard.tsx  OpenPositionsCard.tsx  PnlChart.tsx  SquadronDetailView.tsx  SquadronsPanel.tsx  TelemetryPage.tsx  TradelogPage.tsx  TradesTable.tsx  ViperCard.tsx
control-tower/src/lib/: api.ts  demo.ts  types.ts
docs/: CUSTOM_STRATEGY.md  PERFORMANCE_TUNING.md
integrations/openclaw/: SKILL.md
src/: config.aggressive.rs.example  config.balanced.rs.example  config.conservative.rs.example  lib.rs  main.rs  market_validator.rs  notifications.rs  risk.rs  state.rs  toctou_tests.rs
src/api/: backtest_api.rs  config_schema.rs  mod.rs  server.rs
src/backtest/: bridge.rs  clock.rs  entry.rs  fetch.rs  harness.rs  ledger.rs  llm_score.rs  mod.rs  report.rs  synth.rs
src/backtest/source/: binance.rs  hyperliquid.rs  mod.rs
src/cag/: adama.rs  mod.rs  run.rs  session.rs
src/helpers/: balance.rs  config_helpers.rs  db.rs  dynamic_config.rs  json.rs  llm_advisor.rs  llm_client.rs  market.rs  metrics.rs  mod.rs  nonce.rs  notifications.rs  orders.rs  paper.rs  price.rs  time.rs  volatility.rs  watchdog.rs
src/orchestrator/: executor.rs  market_data.rs  mod.rs  registry.rs  strategy.rs
src/raptors/: derivatives.rs  funding.rs  horizon.rs  hyperliquid.rs  kinematics.rs  mod.rs  price.rs  source.rs  sports.rs  tide.rs
src/squadron/: config.rs  context.rs  mod.rs  patrol_impl.rs  patrol_tasks.rs  raptors.rs
src/strategies/: arbitrage.rs  arbitrage_impl.rs  basis_impl.rs  gboost_impl.rs  maker_impl.rs  mod.rs  momentum.rs  momentum_impl.rs  time_decay.rs  time_decay_impl.rs
src/strategy/: state.rs
src/tasks/: balance.rs  cleanup.rs  funding.rs  market_monitor.rs  merge.rs  mod.rs  oracle.rs
src/venues/: core.rs  lifecycle.rs  mod.rs
src/venues/intl/: mod.rs  orders.rs
src/venues/us/: auth.rs  markets.rs  mod.rs  trader.rs  types.rs  ws.rs
src/vipers/: arbitrage_impl.rs  basis_impl.rs  convergence_impl.rs  gboost_impl.rs  maker_impl.rs  mod.rs  momentum_impl.rs  time_decay_impl.rs  trendcapture_impl.rs  trendreversal_impl.rs
tests/: hyperliquid_live.rs  llm_live.rs  toctou.rs
tools/: README.md  cleanup-contaminated-trades.sh  fix-arb-pnl-history.sh  session_parser.py
