[package]
name = "dradis"
version = "0.2.0"
edition = "2021"
description = "Low-latency Rust prediction-market trading bot for Polymarket. Six autonomous strategies (Momentum, Maker, Arbitrage, Time Decay, Basis, GBoost ML), real-time Next.js Control Tower, and an LLM Advisor that delivers optimization recommendations via Ollama (local or remote) + Telegram."

[dependencies]
polymarket_client_sdk_v2 = { version = "0.5.1", features = ["clob", "ws", "data", "ctf"] }
alloy = { version = "1.3", features = ["signer-local"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
chrono = "0.4"
chrono-tz = "0.9"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tungstenite = "0.28.0"
url = "2.5.8"
regex = "1.12.3"
urlencoding = "2.1.3"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
async-trait = "0.1"
perpetual = "3.0.0-rc.2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
