[package]
name = "dradis"
version = "0.2.0"
edition = "2021"
description = "Low-latency Rust prediction-market trading bot for Polymarket. Six autonomous strategies (Momentum, Maker, Arbitrage, Time Decay, Basis, GBoost ML), real-time Next.js Control Tower, and an LLM Advisor that delivers optimization recommendations via Ollama (local or remote) + Telegram."

# ── Venue selection (see docs/VENUE_ABSTRACTION.md) ──────────────────────────
# Exactly one venue feature must be active per build.  `intl_clob` is the
# self-custody Polymarket international CLOB (EIP-712 signing over Polygon).
# `us_retail` is the custodial, CFTC-regulated US platform (web2 auth, no signer).
# The intl-only crypto deps (`alloy`, the Polymarket SDK) are gated behind
# `intl_clob` so a `us_retail` build does not drag them into its dependency tree.
[features]
default   = ["intl_clob"]
intl_clob = ["dep:polymarket_client_sdk_v2", "dep:alloy"]
us_retail = ["dep:polymarket-us"]

[dependencies]
polymarket_client_sdk_v2 = { version = "0.5.1", optional = true, features = ["clob", "ws", "data", "ctf"] }
alloy = { version = "1.3", optional = true, features = ["signer-local"] }
polymarket-us = { version = "0.2.2", optional = true }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
dashmap = { version = "6", features = ["serde"] }
dotenv = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tungstenite = "0.28.0"
url = "2.5.8"
regex = "1.12.3"
urlencoding = "2.1.3"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
async-trait = "0.1"
perpetual = "3.0.0-rc.2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
