[package]
name = "dradis"
version = "0.2.0"
edition = "2021"
description = "Low-latency Rust prediction-market trading bot for Polymarket. Six autonomous strategies (Momentum, Maker, Arbitrage, Time Decay, Basis, GBoost ML), real-time Next.js Control Tower, and an LLM Advisor that delivers optimization recommendations via Ollama (local or remote) + Telegram."

# ── Venue selection (see docs/VENUE_ABSTRACTION.md) ──────────────────────────
# Exactly one venue feature must be active per build.  `intl_clob` is the
# self-custody Polymarket international CLOB (EIP-712 signing over Polygon).
# `us_retail` is the custodial, CFTC-regulated US platform (web2 auth, no signer).
# The intl-only crypto deps (`alloy`, the Polymarket SDK) are gated behind
# `intl_clob` so a `us_retail` build does not drag them into its dependency tree.
[features]
default   = ["intl_clob", "hyperliquid"]
intl_clob = ["dep:polymarket_client_sdk_v2", "dep:alloy"]
us_retail = ["dep:polymarket-us"]
hyperliquid = ["dep:hyperliquid_rust_sdk"]
# Historical replay backtesting subsystem (src/backtest/, src/bin/backtest.rs).
# NOT in `default` — pulls rs-backtester's plotting/font stack (needs system
# libfontconfig1-dev + pkg-config to build). See README "Backtesting".
backtest = ["dep:rs-backtester", "dep:clap"]

[dependencies]
polymarket_client_sdk_v2 = { version = "0.5.1", optional = true, features = ["clob", "ws", "data", "ctf"] }
alloy = { version = "1.3", optional = true, features = ["signer-local"] }
polymarket-us = { version = "0.3.5", optional = true }
hyperliquid_rust_sdk = { version = "0.6.0", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
dashmap = { version = "6", features = ["serde"] }
dotenv = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tungstenite = "0.28.0"
url = "2.5.8"
regex = "1.12.3"
urlencoding = "2.1.3"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
async-trait = "0.1"
perpetual = "3.0.0-rc.2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
# Multi-provider LLM backend for the LLM Advisor (ollama / anthropic / openai /
# openai-compatible / chatgpt-OAuth). All rig usage is confined to
# src/helpers/llm_client.rs behind a DRADIS-owned trait.
rig-core = "0.39"

# ── Backtesting (feature = "backtest", non-default) ──────────────────────────
# rs-backtester supplies Sharpe/drawdown/win-rate metrics + CSV on a directional
# proxy of the underlying. It unconditionally drags a plotting/font stack
# (needs system libfontconfig1-dev + pkg-config). NEVER call its plot()/i_chart()
# on Linux (hard-coded Windows path join). We only read `Backtest.metrics` and
# call `report_horizontal`. hyperliquid-backtest is deliberately NOT used (its
# advertised API is unreachable dead code — see docs/BACKTEST notes).
rs-backtester = { version = "0.1", optional = true }

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"
required-features = ["backtest"]
